# HelloCV

./: Git.md  Linux.md  Practice_week1.md  README.md
CryptoToolProject/: CMakeLists.txt  cryptotool.cpp
Week3_TrafficLight/: CMakeLists.txt  README.md  practice_week3.cpp
Week3_TrafficLight/opencvtest/: 输出示例.avi
